# mmaze

./: .gitignore  README.md  demo33  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/mmaze/: __init__.py  __main__.py  cell.py  maze.py  visual.py
src/mmaze/generator/: __init__.py  backtracking.py  base.py  binary_tree.py  division.py  ellers.py  growing_tree.py  hunt_and_kill.py  kruskal.py  prims.py  wilsons.py
src/mmaze/solver/: __init__.py  backtracking.py  base.py  shortest_path.py
tests/: mmaze_test.py  test_mmaze.py
