[metadata]
name = mmaze
version = 0.1.4
author = MorvanZhou
author_email = mofanpy@hotmail.com
description = Generating and solving maze
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/mmaze
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/mmaze/issues
    Source=https://github.com/MorvanZhou/mmaze
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses >= 0.8; python_version < "3.7"

[options.packages.find]
where = src

[options.extras_require]
test =
    matplotlib>=3.3.4
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint

